<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/airport"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:id="@+id/transparentOverlay"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_overlay" >

            <include layout="@layout/button_hamburger"/>

            <TextView
                android:id="@+id/textview_newTrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="@dimen/space_medium"
                android:textSize="@dimen/text_large"/>
        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:padding="@dimen/space_medium">

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/first_steps"
                android:gravity="left"
                android:id="@+id/textView1" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:layout_marginBottom="@dimen/space_small"
                android:textSize="@dimen/text_medium"
                android:text="@string/first_steps_text"
                android:gravity="left"
                android:id="@+id/textView2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/landing_divider"/>

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/faq"
                android:gravity="left"
                android:id="@+id/textView3" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textSize="@dimen/text_medium"
                android:text="@string/faq_text"
                android:gravity="left"
                android:id="@+id/textView4" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textStyle="bold"
                android:textSize="@dimen/text_medium"
                android:text="@string/frage1"
                android:gravity="left"
                android:id="@+id/frage1" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textSize="@dimen/text_medium"
                android:text="@string/antwort1"
                android:gravity="left"
                android:id="@+id/antwort1" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textStyle="bold"
                android:textSize="@dimen/text_medium"
                android:text="@string/frage2"
                android:gravity="left"
                android:id="@+id/frage2" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textSize="@dimen/text_medium"
                android:text="@string/antwort2"
                android:gravity="left"
                android:id="@+id/antwort2" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textStyle="bold"
                android:textSize="@dimen/text_medium"
                android:text="@string/frage3"
                android:gravity="left"
                android:id="@+id/frage3" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textSize="@dimen/text_medium"
                android:text="@string/antwort3"
                android:gravity="left"
                android:id="@+id/antwort3" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textStyle="bold"
                android:textSize="@dimen/text_medium"
                android:text="@string/frage4"
                android:gravity="left"
                android:id="@+id/frage4" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textSize="@dimen/text_medium"
                android:text="@string/antwort4"
                android:gravity="left"
                android:id="@+id/antwort4" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textStyle="bold"
                android:textSize="@dimen/text_medium"
                android:text="@string/frage5"
                android:gravity="left"
                android:id="@+id/frage5" />

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:textSize="@dimen/text_medium"
                android:text="@string/antwort5"
                android:gravity="left"
                android:id="@+id/antwort5" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>