<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="prak.travelerapp.MainActivity">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/welcome"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemList"
        android:layout_below="@+id/welcomeMessage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <Button
        android:id="@+id/newTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newTrip"
        android:layout_below="@+id/flickrTest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/flickrTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flickrTest"
        android:layout_below="@+id/itemList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:orientation="vertical">
    </LinearLayout>

</RelativeLayout>
