<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_item"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:textSize="@dimen/text_medium"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/landing_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/delete_for_current_trip"
            android:textStyle="bold"
            android:id="@+id/button_delete_for_trip"
            android:background="@color/white"
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/delete_forever"
            android:id="@+id/button_delete_final"
            android:background="@color/white"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>